tests/NormalTests/paczka1/fuzzy1/39785948.err
Error in line 3: IGbZW7H4Bcd S180 33,6
Error in line 5: a2didRDyd A851 41,3
Error in line 10: a2didRDyd A994 19,46
Error in line 19: SAx3rlBK S180 56,6
Error in line 14: a2didRDyd A994 83,3
Error in line 20: SAx3rlBK A404 90,5
Error in line 23: 6TG0iOUHHs A994 48,1
